10-pod-security.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: docker-security
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
